--- a/config/locales/views/js_screen_views.vi.yml
+++ b/config/locales/views/js_screen_views.vi.yml
@@ -232,6 +232,8 @@ vi:
       diagnosis_lable: "Chuẩn đoán"
       follow_up_lable: "Theo dõi"
       weeks_in_treatment_label: "Số tuần điều trị"
+      comment: "Bình luận"
+      presumptive: "Giả định RR-TB/MDR-TB"
 
     location_select:
       no_region: "Khu vực không thể được tìm thấy cho địa chỉ này, vui lòng chọn một;"
@@ -315,10 +317,14 @@ vi:
     resource_list:
       add_element_btn1: "Thêm phần tử vào danh sách ngoại lệ"
       add_element_btn2: "Thêm phần tử vào danh sách"
+      
+    site_select:
+      site: 'Trang'
 
     sites:
       search_sites_placeholder: "Tìm kiếm trang"
       selection_label: "Lựa chọn bao gồm tất cả trang con"
+      at: "ở "
 
     text_input_modal:
       add_comment_title: "Thêm bình luận"
