--- a/cdx_core/README.rdoc
+++ b/cdx_core/README.rdoc
@@ -1,3 +1,13 @@
 = CdxCore
 
+Core functionality for Cdx.
+
+To customise the application for other countries add an engine called cdx_country_name and add all your customisations there.
+
 This project rocks and uses MIT-LICENSE.
+
+
+=== Technical debt
+
+* Remove decent exposure.  Not used in most of the app. Only in the API.
+* Remove elasticsearch. Almost done.  Need to import device results into test results in a better way and then update the dashboard reports.
