Fix more tests.

--- a/cdx_core/config/locales/views/patients.en.yml
+++ b/cdx_core/config/locales/views/patients.en.yml
@@ -36,6 +36,14 @@ en:
       select_day: 'Select day'
       select_month: 'Select month'
       select_year: 'Select year'
+      institution_tooltip: 'Institution handling this Patient'
+      nickname_tooltip: 'The Patients Nickname - if they have one'
+      entity_id_tooltip: 'The Patients ID'
+      gender_tooltip: 'The Patients Gender'
+      birthdate_tooltip: 'When the Patient was Born'
+      estimate_age_tooltip: 'Enter an age in here and the DOB year will be automatically populated based on it'
+      email_tooltip: 'The Patients Email Address'
+      phone_tooltip: 'A Phone number the Patient can be contacted on'
     index:
       no_patients: 'No patients registered'
       keep_organized: 'Keep your test orders organized under patients medical history'
