--- a/cdx_core/config/locales/devise.en.yml
+++ b/cdx_core/config/locales/devise.en.yml
@@ -42,6 +42,13 @@ en:
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
       updated: "You updated your account successfully."
+    edit:
+      current_password: 'Current Password'
+      new_password: 'New Password'
+      confirm_password: 'Retype new password'
+      test_timestamps: 'Test timestamps'
+      relative_to_my_timezone: 'Relative to my time zone'
+      relative_to_device_timezone: 'Relative to the device time zone'
     sessions:
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
