--- a/cdx_core/config/locales/devise.en.yml
+++ b/cdx_core/config/locales/devise.en.yml
@@ -43,6 +43,7 @@ en:
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
       updated: "You updated your account successfully."
     edit:
+      my_account: 'My Account'
       current_password: 'Current Password'
       new_password: 'New Password'
       confirm_password: 'Retype new password'
