[FIX] Fix issue 2141, 2143, 2148

--- a/cdx_core/config/locales/views/comments.en.yml
+++ b/cdx_core/config/locales/views/comments.en.yml
@@ -6,6 +6,7 @@ en:
     create:
       audit_comment: 'New comment added'
       created_ok: 'Comment was successfully created.'
+      comment_ok: 'Comment was successfully added.'
     permissions:
       deny: "You can't add comments to this patient"
     new:
