--- a/cdx_vietnam/config/locales/views/js_components.vi.yml
+++ b/cdx_vietnam/config/locales/views/js_components.vi.yml
@@ -176,7 +176,7 @@
       col_on: "Kết quả ở"
       col_specimen: "Mẫu văn bản"
       col_appearance: "Xuất hiện"
-      col_test: "Thử nghiệm"
+      col_test: "xét nghiệm"
       col_result: "Kết quả"
       col_site: "Trang"
       col_device_name: "Tên thiết bị"
