--- a/cdx_vietnam/config/locales/views/layout.vi.yml
+++ b/cdx_vietnam/config/locales/views/layout.vi.yml
@@ -6,8 +6,8 @@ vi:
       menu_at: 'ở'
       home: 'Trang chủ'
       patients: 'Bệnh nhân'
-      test_orders: 'Yêu cầu thử nghiệm'
-      test_results: 'Kết quả thử nghiệm'
+      test_orders: 'Yêu cầu xét nghiệm'
+      test_results: 'Kết quả xét nghiệm'
       devices: 'Thiết bị'
       settings: 'Cài đặt'
       my_account: 'Tài khoản của tôi'
