--- a/cdx_vietnam/config/locales/views/patient_logs.vi.yml
+++ b/cdx_vietnam/config/locales/views/patient_logs.vi.yml
@@ -2,4 +2,4 @@ vi:
   patient_logs:
     show:
       header: 'Lịch sử'
-      view_test: 'Nhấp vào đây để hiển thị yêu cầu thử nghiệm.'
+      view_test: 'Nhấp vào đây để hiển thị yêu cầu xét nghiệm.'
