--- a/cdx_vietnam/config/locales/views/test_results.vi.yml
+++ b/cdx_vietnam/config/locales/views/test_results.vi.yml
@@ -1,7 +1,7 @@
 vi:
   test_results:
     filters:
-      title: 'Kết quả thử nghiệm'
+      title: 'Kết quả xét nghiệm'
       show_filters: 'Hiển thị bộ lọc'
       display_as: 'Hiển thị như là'
       condition: 'Tình trạng'
@@ -12,12 +12,12 @@ vi:
       type: 'Loại'
       status: 'Tình trạng'
       sample_id: 'Số seri'
-      test_order_id: 'Mã của yêu cầu thử nghiệm'
+      test_order_id: 'Mã của yêu cầu xét nghiệm'
       device: 'Thiết bị'
-      tests: 'Thử nghiệm'
-      test_orders: 'Yêu cầu thử nghiệm'
+      tests: 'xét nghiệm'
+      test_orders: 'Yêu cầu xét nghiệm'
       show_all: 'Hiển thị tất cả'
-      test_result: 'Kết quả thử nghiệm'
+      test_result: 'Kết quả xét nghiệm'
       appearance: 'Xuất hiện'
       media: 'Phương tiện sử dụng'
       results_h: 'Kết quả H'
@@ -29,20 +29,20 @@ vi:
       results_cm: 'Kết quả Cm'
       results_fq: 'Kết quả Fq'
     show:
-      test_belongs_to: 'Thử nghiệm này thuộc về một cuộc gặp gỡ.'
+      test_belongs_to: 'xét nghiệm này thuộc về một cuộc gặp gỡ.'
       click_here: 'Nhấn ở đây'
       to_view_it: 'để xem nó.'
-      test_details: 'Thông tin chi tiết thử nghiệm'
+      test_details: 'Thông tin chi tiết xét nghiệm'
       institution_name: 'Tổ chức: %{institution_name}'
       patient: 'Bệnh nhân'
-      test_performed_on: 'Thử nghiệm thực thi trên'
+      test_performed_on: 'xét nghiệm thực thi trên'
       by: 'bởi'
       at: 'ở'
       assays: 'Xét nghiệm'
       additional_data: 'Dữ liệu bổ sung'
       sample: 'Mẫu'
-      other_tests: 'Những thử nghiệm khác'
-      no_other_test: 'Không có thử nghiệm khác được thực hiện với mẫu này'
+      other_tests: 'Những xét nghiệm khác'
+      no_other_test: 'Không có xét nghiệm khác được thực hiện với mẫu này'
       was_also_made: 'cũng đã được thực hiện với mẫu này'
       were_also_made: 'cũng đã được thực hiện với mẫu này'
       start_time: "Thời gian bắt đầu"
@@ -50,18 +50,18 @@ vi:
       status: "Trạng thái"
       type: "Loại"
     index:
-      header: 'Không có thử nghiệm nào được báo cáo'
+      header: 'Không có xét nghiệm nào được báo cáo'
       test:
-        zero: 'thử nghiệm'
-        one: 'thử nghiệm'
-        other: '%{count} thử nghiệm'
+        zero: 'xét nghiệm'
+        one: 'xét nghiệm'
+        other: '%{count} xét nghiệm'
       test_result:
-        zero: 'kết quả thử nghiệm'
-        one: 'kết quả thử nghiệm'
-        other: '%{count} kết quả thử nghiệm'
-      test_results: 'kết quả thử nghiệm'
+        zero: 'kết quả xét nghiệm'
+        one: 'kết quả xét nghiệm'
+        other: '%{count} kết quả xét nghiệm'
+      test_results: 'kết quả xét nghiệm'
       setup_devices: 'Cài đặt các thiết bị của bạn trước tiên để bắt đầu báo cáo.'
-      manual_results: 'Bạn có thể thêm các thử nghiệm theo yêu cầu trong Yêu cầu thử nghiệm của bạn.'
+      manual_results: 'Bạn có thể thêm các xét nghiệm theo yêu cầu trong Yêu cầu xét nghiệm của bạn.'
       tab_device: 'Thiết bị'
       tab_microscopy: 'Kính hiển vi'
       tab_xpert: 'Xpert'
