--- a/config/locales/views/api.vi.yml
+++ b/config/locales/views/api.vi.yml
@@ -6,7 +6,7 @@ vi:
         submit_message: 'Gửi tin nhắn'
         lbl_device: 'Thiết bị'
         lbl_data: 'Dữ liệu'
-        col_test_result: 'Kết quả thử nghiệm để xuất ra:'
+        col_test_result: 'Kết quả xét nghiệm để xuất ra:'
         col_start_date: 'Ngày giờ bắt đầu:'
         col_end_date: 'Ngày giờ kết thúc:'
         btn_create_msg: 'Tạo tin nhắn'
@@ -25,4 +25,4 @@ vi:
         lbl_phone: 'Số điện thoại bệnh nhân:'
         lbl_condition: 'Điều kiện:'
         lbl_result: 'Kết quả:'
-        btn_simulate_test: 'Mô phỏng thử nghiệm'
+        btn_simulate_test: 'Mô phỏng xét nghiệm'
