--- a/cdx_vietnam/config/locales/views/encounters.vi.yml
+++ b/cdx_vietnam/config/locales/views/encounters.vi.yml
@@ -1,20 +1,20 @@
 vi:
   encounters:
     new:
-      existing_test: 'Tồn tại thử nghiệm cho %{patient_name}'
-      new_test: 'Thử nghiệm mới cho %{patient_name}'
-      no_patient: 'Mỗi cuộc gặp phải thuộc về một bệnh nhân. Xin vui lòng đến trang Bệnh nhân và nhấn vào Thêm yêu cầu thử nghiệm'
+      existing_test: 'Tồn tại xét nghiệm cho %{patient_name}'
+      new_test: 'xét nghiệm mới cho %{patient_name}'
+      no_patient: 'Mỗi cuộc gặp phải thuộc về một bệnh nhân. Xin vui lòng đến trang Bệnh nhân và nhấn vào Thêm yêu cầu xét nghiệm'
     show:
-      test_order: 'Yêu cầu thử nghiệm'
+      test_order: 'Yêu cầu xét nghiệm'
     perform_encounter_action:
-      merge: 'Không thể thêm một thử nghiệm hoặc mẫu thử thuộc về một %{entity_type} khác'
+      merge: 'Không thể thêm một xét nghiệm hoặc mẫu thử thuộc về một %{entity_type} khác'
       error: 'Lỗi %{action_name} %{class_name}'
     edit:
-      test_order: 'Yêu cầu thử nghiệm'
+      test_order: 'Yêu cầu xét nghiệm'
     new_index:
-      new_tests: 'Thử nghiệm mới'
+      new_tests: 'xét nghiệm mới'
       select_option: 'Hãy chọn một trong những tùy chọn bên dưới.'
-      new_test_order: 'Thử nghiệm mới'
-      order_diagnostic_test: 'Yêu cầu xét nghiệm đối với bệnh nhân và mẫu. Chỉ định loại mẫu, loại thử nghiệm, lý do kiểm tra và ngày hết hạn. Thêm mã mẫu hoặc dùng bộ tạo mã mẫu.'
-      reported_test: 'Đã báo cáo thử nghiệm'
-      organise_test_result: 'Tổ chức và giao kết quả thử nghiệm cho bệnh nhân. Đánh giá kết quả và cung cấp chẩn đoán.'
+      new_test_order: 'xét nghiệm mới'
+      order_diagnostic_test: 'Yêu cầu xét nghiệm đối với bệnh nhân và mẫu. Chỉ định loại mẫu, loại xét nghiệm, lý do kiểm tra và ngày hết hạn. Thêm mã mẫu hoặc dùng bộ tạo mã mẫu.'
+      reported_test: 'Đã báo cáo xét nghiệm'
+      organise_test_result: 'Tổ chức và giao kết quả xét nghiệm cho bệnh nhân. Đánh giá kết quả và cung cấp chẩn đoán.'
