--- a/cdx_vietnam/config/locales/views/js_screen_views.vi.yml
+++ b/cdx_vietnam/config/locales/views/js_screen_views.vi.yml
@@ -35,7 +35,7 @@ vi:
       categories_tooltip: "Có nhiều loại thông báo lỗi"
       anomalies_label: "Các dị thường"
       device_errors_label: "Các lỗi thiết bị"
-      test_results_label: "Kết quả thử nghiệm"
+      test_results_label: "Kết quả xét nghiệm"
       utilization_efficiency_label: "Hiệu quả sử dụng"
       cancel_btn: "Hủy bỏ"
       update_alert_btn: "Chỉnh Sửa Cảnh Báo"
@@ -161,7 +161,7 @@ vi:
 
     encounter_form:
       diagnosis_label: "Chuẩn đoán"
-      diagnosis_text: "Mỗi lần có 1 thử nghiệm mới, danh sách các tình trạng sẽ được cập nhật cho bạn chuẩn đoán"
+      diagnosis_text: "Mỗi lần có 1 xét nghiệm mới, danh sách các tình trạng sẽ được cập nhật cho bạn chuẩn đoán"
       quantitative_placeholder: "Định lượng"
       observations_placeholder: "Quan sát"
       site_label: "Trang"
@@ -171,7 +171,7 @@ vi:
       add_sample_heading: "Thêm mẫu"
       search_placeholder: "Tìm kiếm bằng mã mẫu"
       unify_sample_heading: "Mẫu thống nhất"
-      add_test_btn: "Thêm thử nghiệm"
+      add_test_btn: "Thêm xét nghiệm"
       save_btn: "Lưu"
 
     encounter_new:
@@ -184,36 +184,36 @@ vi:
       site_detail_heading: "Chi tiết trang"
       requesting_site_label: "Trang yêu cầu:"
       performing_site_label: "Trang thực hiện:"
-      test_detail_heading: "Chi tiết thử nghiệm"
+      test_detail_heading: "Chi tiết xét nghiệm"
       order_id_label: "Mã của yêu cầu:"
-      testing_for_label: "Thử nghiệm cho:"
+      testing_for_label: "xét nghiệm cho:"
       culture_format_label: "Định dạng môi trường nuôi cấy:"
       comment_label: "Bình luận:"
       weeks_in_treatment_label: "Số tuần điều trị:"
       samples_id_label: "Mã mẫu:"
       sample_type_label: "Loại mẫu:"
-      test_due_date_label: "Ngày hết hạn thử nghiệm:" 
+      test_due_date_label: "Ngày hết hạn xét nghiệm:" 
       status_label: "Tình trạng:"
-      update_btn: "Cập nhật thử nghiệm"
-      cancel_confirm_msg: "bạn muốn hủy bỏ vĩnh viễn thử nghiệm này. Bạn có chắc muốn tiếp tục?"
+      update_btn: "Cập nhật xét nghiệm"
+      cancel_confirm_msg: "bạn muốn hủy bỏ vĩnh viễn xét nghiệm này. Bạn có chắc muốn tiếp tục?"
       cancel_confirm_title: "Xác nhận hủy bỏ"
       delete_btn: "Xóa"
-      cancel_test_order_btn: "Hủy bỏ thử nghiệm"
+      cancel_test_order_btn: "Hủy bỏ xét nghiệm"
       cancel_confirmation_btn: "Xác nhận hủy bỏ"
       confirmation_btn: "Xác nhận"
       cancel_btn: "Hủy bỏ"
       confirm_btn: "Xác nhận"
-      reason_exam_label: "Lý do thử nghiệm:"
+      reason_exam_label: "Lý do xét nghiệm:"
       presumptive: "Giả định TB RR:"
 
     fresh_tests_encounter_form:
       alert_new_sample: "Mẫu này đã được thêm"
-      alert_testing_for: "Vui lòng chọn một loại thử nghiệm"
+      alert_testing_for: "Vui lòng chọn một loại xét nghiệm"
       alert_exam_reason: "Vui lòng chọn một Examination Reason."
-      alert_tests_requested: "Vui lòng chọn một hoặc nhiều loại thử nghiệm"
+      alert_tests_requested: "Vui lòng chọn một hoặc nhiều loại xét nghiệm"
       alert_add_samples: "Vui lòng thêm một hoặc nhiều mẫu thử."
-      test_order_details_heading: "Chi tiết thử nghiệm"
-      testing_for_label: "Thử nghiệm cho"
+      test_order_details_heading: "Chi tiết xét nghiệm"
+      testing_for_label: "xét nghiệm cho"
       TB_option: "Lao"
       HIV_option: "HIV"
       Ebola_option: "Ebola"
@@ -227,7 +227,7 @@ vi:
       sputum_option: "Đờm"
       blood_option: "Máu"
       other_option: "Khác - Vui lòng mô tả cụ thể"
-      test_due_date_label: "Ngày hết hạn thử nghiệm"
+      test_due_date_label: "Ngày hết hạn xét nghiệm"
       save_btn: "Lưu"
       cancel_btn: "Hủy bỏ"
       diagnosis_lable: "Chuẩn đoán"
@@ -241,9 +241,9 @@ vi:
       choose_one: "Chọn một"
 
     outstanding_tests_table:
-      outstanding_tests_title: "Các thử nghiệm nỗi bật"
+      outstanding_tests_title: "Các xét nghiệm nỗi bật"
       no_data_display: "Không có dữ liệu để hiển thị"
-      test_order_col: "Số thứ tự thử nghiệm"
+      test_order_col: "Số thứ tự xét nghiệm"
       date_ordered_col: "Ngày yêu cầu"
       ordered_by_col: "Yêu cầu bởi"
       outstanding_days_col: "Những ngày nỗi bật"
@@ -257,7 +257,7 @@ vi:
       phone_col: "Số điện thoại"
       email_col: "Email"
       edit: "Sửa"
-      create_test_order: "Tạo mới yêu cầu thử nghiệm"
+      create_test_order: "Tạo mới yêu cầu xét nghiệm"
       alt_address_col: "Địa chỉ"
 
     patient_select:
@@ -300,7 +300,7 @@ vi:
       stt_inprogress: 'Đang tiến hành'
       stt_completed: 'Hoàn tất'
       stt_rejected: 'Từ chối'
-      title: 'Yêu Cầu Thử Nghiệm'
+      title: 'Yêu Cầu xét nghiệm'
       add_result: "Thêm kết quả"
       view_result: "Xem kết quả"
       type_col: "Loại"
@@ -312,8 +312,8 @@ vi:
       status_col: "Tình trạng"
       comment_col: "Bình luận"
       result_col: "Kết quả"
-      confirm_msg: "Bạn phải nhập kết quả thử nghiệm môi trường nuôi cấy trước khi có thể thêm kết quả DST"
-      confirm_title: "Yêu cầu kết quả thử nghiệm môi trường nuôi cấy"
+      confirm_msg: "Bạn phải nhập kết quả xét nghiệm môi trường nuôi cấy trước khi có thể thêm kết quả DST"
+      confirm_title: "Yêu cầu kết quả xét nghiệm môi trường nuôi cấy"
       close_btn: "Đóng"
       add_result_btn:  "Thêm kết quả"
       turnaround_col: "Chu kỳ"
@@ -332,7 +332,7 @@ vi:
 
     text_input_modal:
       add_comment_title: "Thêm bình luận"
-      test_comment_heading: "Bình luận thử nghiệm"
+      test_comment_heading: "Bình luận xét nghiệm"
       add_comment_placeholder: "Thêm bình luận"
       save_btn: "Lưu"
       close_btn: "Đóng"
