--- a/cdx_vietnam/config/locales/views/patients.vi.yml
+++ b/cdx_vietnam/config/locales/views/patients.vi.yml
@@ -3,11 +3,11 @@ vi:
     show:
       episode_empty_header: 'Không có lịch sử y tế'
       episode_empty_text1: 'Tạo một %{href} để bắt đầu lịch sử y tế.'
-      episode_empty_text2: 'Bạn không thể tạo yêu cầu thử nghiệm cho đến khi một %{href} được thêm.'
+      episode_empty_text2: 'Bạn không thể tạo yêu cầu xét nghiệm cho đến khi một %{href} được thêm.'
       new_episode: 'Tập mới'
       add_episode: 'Thêm tập'
       edit_episode: 'Chỉnh sửa tập'
-      add_test_order: 'Thêm yêu cầu thử nghiệm'
+      add_test_order: 'Thêm yêu cầu xét nghiệm'
       add_comment: 'Thêm bình luận'
       edit_patient: 'Chỉnh sửa bệnh nhân'
       patient_summary: 'Hồ sơ bệnh nhân'
@@ -20,7 +20,7 @@ vi:
       show_all: 'Hiển thị tất cả'
       name: 'Tên'
       patient_id: 'Mã bệnh nhân'
-      last_test_order: 'yêu cầu thử nghiệm cuối cùng'
+      last_test_order: 'yêu cầu xét nghiệm cuối cùng'
       patients: 'Bệnh nhân'
       clear_button:  'Xóa'
       address: 'Địa chỉ'
@@ -47,12 +47,12 @@ vi:
       phone_label: 'Điện thoại'
     index:
       no_patients: 'Không có bệnh nhân nào đăng ký'
-      keep_organized: 'Giữ cho yêu cầu thử nghiệm của bạn được tổ chức theo lịch sử y tế của bệnh nhân'
+      keep_organized: 'Giữ cho yêu cầu xét nghiệm của bạn được tổ chức theo lịch sử y tế của bệnh nhân'
       name: 'Tên'
       patient_id: 'Mã bệnh nhân'
       birth_date_on: 'Ngày sinh'
       city: 'Thành phố'
-      last_test_order: 'Yêu cầu thử nghiệm cuối cùng'
+      last_test_order: 'Yêu cầu xét nghiệm cuối cùng'
       patient:
         zero: 'Không bệnh nhân'
         one:  'Một bệnh nhân'
