--- a/config/locales/views/devise.vi.yml
+++ b/config/locales/views/devise.vi.yml
@@ -49,7 +49,7 @@ vi:
         lbl_retype_new_pass: 'Gõ lại mật khẩu mới'
         lbl_locale: 'Nước'
         lbl_time_zone: 'Múi giờ'
-        lbl_test_timestamps: 'Thời gian thử nghiệm'
+        lbl_test_timestamps: 'Thời gian xét nghiệm'
         select_my_timezone: 'So với múi giờ của tôi'
         select_device_timezone: 'So với múi giờ của thiết bị'
 
