--- a/config/locales/views/undefined_results.vi.yml
+++ b/config/locales/views/undefined_results.vi.yml
@@ -1,6 +1,6 @@
 en:
   undefined_results:
     show:
-      not_support: 'Danh mục thử nghiệm chưa hỗ trợ.'
+      not_support: 'Danh mục xét nghiệm chưa hỗ trợ.'
 
       
