--- a/cdx_core/config/locales/views/test_orders.en.yml
+++ b/cdx_core/config/locales/views/test_orders.en.yml
@@ -10,6 +10,7 @@ en:
         other: '%{count} Test orders'
     filters:
       show_all: 'Show all'
+      show_all_outstanding: 'Show all outstanding'
       show_filters: 'Show filters'
       testing_for: 'Testing for'
       date: 'Date'
