--- a/cdx_vietnam/config/locales/views/patients.vi.yml
+++ b/cdx_vietnam/config/locales/views/patients.vi.yml
@@ -45,6 +45,15 @@ vi:
       birth_date_on_label: 'Ngày sinh'
       email_label: 'Email'
       phone_label: 'Điện thoại'
+      institution_tooltip: 'Tổ chức tiếp nhận bệnh nhân'
+      nickname_tooltip: 'Biệt danh của bệnh nhân (nếu có)'
+      entity_id_tooltip: 'Mã số bệnh nhân'
+      gender_tooltip: 'Giới tính bệnh nhân'
+      birthdate_tooltip: 'Ngày sinh của bệnh nhân'
+      estimate_age_tooltip: 'Điền tuổi vào đây và ngày sinh sẽ được tự động điền vào'
+      email_tooltip: 'Địa chỉ email của bệnh nhân'
+      phone_tooltip: 'Một số điện thoại có thể liên hệ được của bệnh nhân'
+      social_security_code_tooltip: 'Số CMND của bệnh nhân'
     index:
       no_patients: 'Không có bệnh nhân nào đăng ký'
       keep_organized: 'Giữ cho yêu cầu xét nghiệm của bạn được tổ chức theo lịch sử y tế của bệnh nhân'
