--- a/cdx_core/config/locales/views/home.en.yml
+++ b/cdx_core/config/locales/views/home.en.yml
@@ -41,12 +41,12 @@ en:
     settings:
       header_settings: 'Settings'
       alert: 'Alerts'
-      alert_notice: 'Keep your team notified about important stuff.'
+      alerts_notice: 'Keep your team notified about important stuff.'
       role:
         zero: 'No roles'
         one: "1 Role"
         other: "%{count} Roles"
-      role_notice: 'Manage users permissions with reusable policies'
+      roles_notice: 'Manage users permissions with reusable policies'
       sites: 'Sites'
       sites_notice: 'Manage the Sites'
       messages: 'Messages'
